# INSIGHTORA

./: .env.example  .gitignore  BI_PROJECT_PLAN.md  DEPLOYMENT.md  Dockerfile  ENHANCED_AUTH_COMPLETE.md  MONGODB_SETUP.md  Makefile  POSTGRESQL_SUCCESS.md  POSTGRES_OPTIONS.md  README.md  SAFE_MIGRATION_STRATEGY.md  SECURITY_ENHANCEMENT_COMPLETE.md  STATUS.md  bee_test.js  docker-compose.yml  package-lock.json  package.json  render.yaml  test_auth_flow.sh  test_simplified_auth.sh  tsconfig.json
.github/workflows/: rust-build.yml
backend/: .env.example  CLEANUP_GUIDE.md  DEVELOPER_GUIDE.md  Dockerfile  MODULAR_STRUCTURE.md  PHASE1_COMPLETE_TEST_SUMMARY.md  README.md  SETUP.md  alembic.ini  docker-compose.yml  get_otp.py  init-db.sql  main_simple.py  pyproject.toml  requirements.txt  requirements_essential.txt  reset_db.py  setup.sh  simple_setup.sh  start.bat  start.sh  start_simple.sh  test_auth_flow.py  test_email.py  test_login.py  test_login_verify.py  test_protected.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  dashboards.py  data_sources.py  queries.py
backend/app/api/v1/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  email_service.py  events.py  exceptions.py  middleware.py  rate_limiter.py  security.py
backend/app/models/: __init__.py  dashboard.py  data_source.py  query.py  user.py
backend/app/modules/: __init__.py
backend/app/modules/auth/: __init__.py  exceptions.py  models.py  routes.py  schemas.py  service.py
backend/app/modules/auth/dependencies/: __init__.py  auth.py  permissions.py
backend/app/modules/auth/exceptions/: __init__.py  auth.py  user.py
backend/app/modules/auth/models/: __init__.py  token.py  user.py
backend/app/modules/auth/repositories/: __init__.py  token_repo.py  user_repo.py
backend/app/modules/auth/routes/: __init__.py  login.py  password.py  register.py
backend/app/modules/auth/schemas/: __init__.py  auth.py  token.py  user.py
backend/app/modules/auth/services/: __init__.py  auth_service.py  token_service.py  user_service.py
backend/app/shared/: __init__.py  constants.py  formatters.py  validators.py
backend/app/utils/: __init__.py  data_processing.py  exceptions.py  validators.py  validators_old.py
backend/requirements/: base.txt  dev.txt
insightora_core/: Cargo.toml
insightora_core/src/: lib.rs  python_bindings.rs
insightora_core/src/dataframe/: aggregations.rs  mod.rs  operations.rs  transformations.rs
insightora_core/src/io/: arrow_bridge.rs  csv_parser.rs  excel_parser.rs  mod.rs
insightora_core/src/query/: executor.rs  mod.rs  optimizer.rs
insightora_core/src/stats/: correlation.rs  descriptive.rs  mod.rs  outliers.rs
insightora_core/src/streaming/: buffer.rs  mod.rs  window.rs
insightora_core/src/utils/: memory.rs  metrics.rs  mod.rs
prisma/: schema.prisma
prisma/migrations/20251021112311_enhanced_auth_system/: migration.sql
public/: index.html
scripts/: README.md  build_rust.ps1  build_rust.sh  install_rust.sh  tasks.ps1  test_build.ps1
src/: BeeAgentService.ts  debug.ts  server.ts  swagger.config.ts  test.ts
src/config/: DatabaseManager.ts  database.ts  prisma.ts
src/middleware/: auth.ts
src/models/: OTPService.ts  TrustedDeviceService.ts  UserService.ts  index.ts
src/routes/: analytics.ts  auth.ts  chat.ts  data.ts  test.ts  user.ts
src/services/: EmailService.ts
