[package]
name = "insightora_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "insightora_core"
crate-type = ["cdylib"]  # Create shared library for Python integration

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.8"
tokio = { version = "1.35", features = ["full"] }
polars = { version = "0.36", features = ["lazy", "parquet", "json"] }
# Using polars' arrow re-export for compatibility
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
num_cpus = "1.16"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
